# endo-ai

./: .envrc  .gitignore  README.md  devenv.nix  dotenv  env_setup.py  load_model.ipynb  manage.py  merged_predictions.json  notes.md  pyproject.toml
conf_template/: db.yaml  default.env
devenv/tasks/: default.nix  env.nix
endo_ai/: _settings.py  asgi.py  keycloak_middleware.py  logging_filters.py  settings.py  settings_base.py  urls.py  wsgi.py
endo_ai/management/commands/: censor_outside.py  create_anonym_reports.py  create_anonym_videos.py  create_multilabel_model_meta.py  create_pseudo_examinations.py  create_pseudo_patients.py  export_anonym_videos.py  export_patients.py  import_model.py  import_report.py  import_video.py  import_video_segmentation_file.py  predict_raw_video_file.py  predict_raw_video_files.py  set_active_meta.py
endo_ai/middleware/: log_context.py
endo_ai/predictor/: __init__.py  inference_dataset.py  model_loader.py  postprocess.py  predict.py  prediction_visualizer.py  run_visualizer.py  utils.py
endo_ai/settings_dev/: __init__.py
endo_ai/settings_prod/: __init__.py
scripts/: check_paths.py  cpu_report.py  demo_pipe.sh  dev.py  ensure_psql_user.py  get_outside_frame_paths.py  import_legacy_annotations.py  import_report.py  import_video.py  import_video_from_yaml.py  merge_demo_videos.py  predict_frame.py  predict_video.py  process_video.py  serialize_patient_examination.py  serialize_video.py  summary_after_demo_pipe.py  transcode_videos.sh  verify_env.py  video_clean_frames.py  video_extract_frames.py
