[project]
name = "endo-ai"
version = "0.1.0"
description = "EndoReg Db API Service"
readme = "README.md"
requires-python = ">=3.11"

# django-cors-headers==4.7.0
#  - django-extensions==3.2.3
#  - endo-ai==0.1.0 (from file:///home/admin/dev/endo-ai)
#  - endoreg-db==0.5.3 (from file:///home/admin/dev/endo-ai/endoreg_db_production)
#  - endoreg-db-api==0.1.0 (from file:///home/admin/dev/endo-ai/endoreg_db_api_production)


dependencies = [
    "agl-frame-extractor",
    "agl-report-reader>=0.4.0",
    "albumentations",
    "asgiref",
    "certifi",
    "channels",
    "daphne",
    "django",
    "django-oauth-toolkit>=3.0.1",
    "endoreg-db",
    "faker>=36.1.1",
    "gender-guesser>=0.4.0",
    "icecream",
    "opencv-python",
    "psutil>=7.0.0",
    "psycopg[binary]",
    "pydantic",
    "pyjwt>=2.10.1",
    "pyperformance>=1.11.0",
    "python-ffmpeg",
    "python-keycloak>=5.3.1",
    "pytorch-lightning",
    "pyyaml",
    "requests>=2.32.3",
    "scipy",
    "torch",
    "torchaudio",
    "torchvision",
    "whitenoise",
]

[tool.setuptools]
packages = ["endo_ai"]

[tool.uv.sources]
endoreg-db = { path = "endoreg_db_production" }
agl-frame-extractor = { path = "agl_frame_extractor" }
endo-ai = { path = "endo_ai" }
